@@ -1,22 +1,31 @@
 package com.example.employeesmanager.controller;
 
+import com.example.employeesmanager.dto.StaffMajorFacilityDTO;
+import com.example.employeesmanager.entity.MajorFacility;
 import com.example.employeesmanager.entity.Staff;
 import com.example.employeesmanager.entity.StaffMajorFacility;
+import com.example.employeesmanager.service.MajorFacilityService;
 import com.example.employeesmanager.service.StaffMajorFacilityService;
 import com.example.employeesmanager.service.StaffService;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.core.io.ClassPathResource;
+import org.springframework.core.io.Resource;
+import org.springframework.http.HttpHeaders;
+import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
+import org.springframework.web.multipart.MultipartFile;
 
+import java.io.IOException;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/staff")
 @CrossOrigin(origins = "http://localhost:3000")
 public class StaffController {
-
 
     @Autowired
     private StaffService staffService;
@@ -24,8 +33,11 @@ public class StaffController {
     @Autowired
     private StaffMajorFacilityService staffMajorFacilityService;
 
+    @Autowired
+    private MajorFacilityService majorFacilityService;
+
     @PostMapping("/import")
-    public ResponseEntity<?> importStaff(@RequestParam("file") org.springframework.web.multipart.MultipartFile file) {
+    public ResponseEntity<?> importStaff(@RequestParam("file") MultipartFile file) {
         try {
             var result = staffService.importStaffFromExcel(file);
             return ResponseEntity.ok(result);
@@ -78,55 +90,73 @@ public class StaffController {
         return updated != null ? ResponseEntity.ok(updated) : ResponseEntity.notFound().build();
     }
 
-    // Lấy danh sách bộ môn chuyên ngành của nhân viên
     @GetMapping("/{id}/majors")
     public ResponseEntity<?> getStaffMajors(@PathVariable UUID id) {
         try {
-            // Lấy danh sách StaffMajorFacility
             var list = staffMajorFacilityService.getByStaffId(id);
-            // Map sang DTO
             var dtoList = list.stream().map(smf -> {
                 var majorFacility = smf.getMajorFacility();
                 var departmentFacility = majorFacility.getDepartmentFacility();
                 var department = departmentFacility.getDepartment();
                 var major = majorFacility.getMajor();
                 var facility = departmentFacility.getFacility();
-                // Giả sử status là chức vụ, có thể map số sang tên nếu cần
-                String position = smf.getStatus() != null ? smf.getStatus().toString() : "";
-                return new com.example.employeesmanager.dto.StaffMajorFacilityDTO(
-                    smf.getId(),
-                    position,
-                    department != null ? department.getName() : "",
-                    major != null ? major.getName() : "",
-                    facility != null ? facility.getName() : ""
+
+                String position = "";
+                if (smf.getStatus() != null) {
+                    switch (smf.getStatus()) {
+                        case 1: position = "Giảng viên"; break;
+                        case 2: position = "Trưởng bộ môn"; break;
+                        case 3: position = "Phó trưởng bộ môn"; break;
+                        default: position = "Khác";
+                    }
+                }
+
+                return new StaffMajorFacilityDTO(
+                        smf.getId(),
+                        position,
+                        department != null ? department.getName() : "",
+                        major != null ? major.getName() : "",
+                        facility != null ? facility.getName() : ""
                 );
-            }).toList();
+            }).collect(Collectors.toList());
+
             return ResponseEntity.ok(dtoList);
         } catch (Exception e) {
             return ResponseEntity.badRequest().body(e.getMessage());
         }
     }
 
-    // Thêm bộ môn chuyên ngành cho nhân viên
     @PostMapping("/{id}/majors")
     public ResponseEntity<?> addStaffMajor(@PathVariable UUID id, @RequestBody StaffMajorFacility staffMajorFacility) {
         try {
-            // Gán staff id cho staffMajorFacility
-            staffMajorFacility.setStaff(staffService.getStaffById(id).orElseThrow(() -> new IllegalArgumentException("Nhân viên không tồn tại")));
+            Staff staff = staffService.getStaffById(id)
+                    .orElseThrow(() -> new IllegalArgumentException("Nhân viên không tồn tại"));
+
+            staffMajorFacility.setStaff(staff);
+
+            // Đảm bảo majorFacility đã được load đầy đủ
+            MajorFacility majorFacility = majorFacilityService.getById(staffMajorFacility.getMajorFacility().getId())
+                    .orElseThrow(() -> new IllegalArgumentException("Bộ môn chuyên ngành không tồn tại"));
+
+            // Lấy thông tin facility từ majorFacility
+            UUID newFacilityId = majorFacility.getDepartmentFacility().getFacility().getId();
 
             // Kiểm tra ràng buộc 1 bộ môn chuyên ngành trên 1 cơ sở
-            UUID majorFacilityId = staffMajorFacility.getMajorFacility().getId();
-            UUID facilityId = staffMajorFacilityService.getFacilityIdByMajorFacilityId(majorFacilityId);
-
             List<StaffMajorFacility> existingMajors = staffMajorFacilityService.getByStaffId(id);
             boolean exists = existingMajors.stream()
-                .anyMatch(smf -> {
-                    UUID existingFacilityId = staffMajorFacilityService.getFacilityIdByMajorFacilityId(smf.getMajorFacility().getId());
-                    return existingFacilityId.equals(facilityId);
-                });
+                    .anyMatch(smf -> smf.getMajorFacility()
+                            .getDepartmentFacility()
+                            .getFacility()
+                            .getId()
+                            .equals(newFacilityId));
+
             if (exists) {
                 throw new IllegalArgumentException("Nhân viên đã có bộ môn chuyên ngành trong cơ sở này");
             }
+
+            staffMajorFacility.setId(UUID.randomUUID());
+            staffMajorFacility.setCreatedDate(System.currentTimeMillis());
+            staffMajorFacility.setLastModifiedDate(System.currentTimeMillis());
 
             StaffMajorFacility saved = staffMajorFacilityService.save(staffMajorFacility);
             return ResponseEntity.ok(saved);
@@ -135,32 +165,16 @@ public class StaffController {
         }
     }
 
-    // Endpoint tải file template import
     @GetMapping("/import/template")
-    public ResponseEntity<?> downloadImportTemplate() {
-        try {
-            // Đường dẫn file template trong resources/static
-            String filePath = "static/import_template.xlsx";
-            ClassLoader classLoader = getClass().getClassLoader();
-            java.net.URL resource = classLoader.getResource(filePath);
-            if (resource == null) {
-                return ResponseEntity.notFound().build();
-            }
-            java.nio.file.Path path = java.nio.file.Paths.get(resource.toURI());
-            byte[] data = java.nio.file.Files.readAllBytes(path);
+    public ResponseEntity<Resource> downloadImportTemplate() throws IOException {
+        Resource resource = new ClassPathResource("templates/import_template.xlsx");
 
-            return ResponseEntity.ok()
-                    .header("Content-Disposition", "attachment; filename=import_template.xlsx")
-                    .header("Content-Type", "application/vnd.openxmlformats-officedocument.spreadsheetml.sheet")
-                    .body(data);
-        } catch (Exception e) {
-            return ResponseEntity.internalServerError().body("Lỗi khi tải file template");
-        }
+        return ResponseEntity.ok()
+                .header(HttpHeaders.CONTENT_DISPOSITION, "attachment; filename=import_template.xlsx")
+                .contentType(MediaType.parseMediaType("application/vnd.openxmlformats-officedocument.spreadsheetml.sheet"))
+                .body(resource);
     }
 
-
-
-    // Xóa bộ môn chuyên ngành của nhân viên
     @DeleteMapping("/{id}/majors/{majorId}")
     public ResponseEntity<?> deleteStaffMajor(@PathVariable UUID id, @PathVariable UUID majorId) {
         try {
